Fix loader visibility

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -108,8 +108,9 @@
   height: 50px;
 }
 
-.spinner path {
-  stroke: hsl(210, 70, 75);
+.spinner > circle {
+  stroke: #c19932;
+  stroke-width: 3px;
   stroke-linecap: round;
   animation: dash 1.5s ease-in-out infinite;
 }
